--- a/#src/scss/_fonts.scss
+++ b/#src/scss/_fonts.scss
@@ -1,2 +1,2 @@
-// Put here your link to fonts 
-/* FONTS */
+// Montserrat
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap');
