--- a/#src/scss/_header.scss
+++ b/#src/scss/_header.scss
@@ -1,4 +1,45 @@
-/*HEADER*/
-.header{
-	
+.header {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	&.header-active{
+		min-height: 36+36px;
+		background-color: #fff;
+	}
+	&__row {
+		min-height: 36+36+32px;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+
+	&__logo {
+		a{color: #252B42;}
+		letter-spacing: 0.1px;
+		font-weight: bold;
+		font-size: 24px;
+		line-height: 32px;
+	}
+
+	&__list {
+		display: flex;
+	}
+
+	&__item {
+		font-weight: 600;
+		font-size: 14px;
+		line-height: 24px;
+		letter-spacing: 0.2px;
+		a{color: #737373;}
+
+		margin-left: 21px;
+		&:first-child{margin: 0;}
+
+		text-shadow: 1px 1px 1px rgba(255, 255, 255, 1);
+	}
+
+	&__burger {
+		display: none;
+	}
 }
