--- a/#src/scss/_config.scss
+++ b/#src/scss/_config.scss
@@ -23,9 +23,14 @@
 	letter-spacing: 0.2px;
 	color: #252B42;
 }
+
 .text{
 	font-weight: 500;
 	font-size: 14px;
 	line-height: 20px;
 	color: #737373;
+}
+
+img{
+	max-width: 100%;
 }
