--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -139,7 +139,7 @@ body{
 	&__advantages {
 		background: #FAFAFA;
 		padding-top: 110px;
-		padding-bottom: 80;
+		padding-bottom: 80px;
 	}
 	&__title {
 		text-align: center;
@@ -186,6 +186,107 @@ body{
 		text-transform: uppercase;
 
 		margin-top: 10px;
+	}
+}
+
+// <================================================================================>
+
+
+.service {
+	&__service{
+		padding: 100px 0;
+	}
+	&__title {
+		text-align: center;
+		margin: 0 auto;
+		max-width: 461px;
+	}
+	&__text {
+		text-align: center;
+		margin: 0 auto;
+		max-width: 511px;
+	}
+	&__row {
+		margin-top: 100px;
+
+		display: grid;
+		grid-template-columns: 60% 40%;
+		grid-column-gap: 121px;
+	}
+	&__video {
+		position: relative;
+		width: 100%;
+		height: 442px;
+		background: url('../img/service/img.png') 0 0/cover no-repeat;
+		a::before{
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			display: block;
+			width: 100%;
+			height: 100%;
+		}
+		span{
+			width: 100px;
+			height: 100px;
+			border-radius: 50%;
+			background: #00A0C1;
+
+			position: absolute;
+			top: 50%;
+			right: 50%;
+			transform: translateX(-50%);
+			transform: translateY(-50%);
+			margin-right: -50px;
+
+			display: flex;
+			align-items: center;
+			justify-content: center;
+
+			&::before{
+				content: '';
+				border: 15px solid transparent;
+				border-left: 20px solid #fff;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+
+				margin-right: -15px;
+			}
+		}
+	}
+	&__content {
+
+
+	}
+}
+
+.content-service {
+	&__title {
+		line-height: 57px;
+		max-width: 324px;
+	}
+	&__text {
+		margin-top: 10px;
+		max-width: 330px;
+	}
+	&__list {
+		margin-top: 50px;
+	}
+	&__item {
+		margin-top: 40px;
+		padding-left: 32+19px;
+		&_1{
+			background: url('../img/service/list-icons/01.svg') 0 0 no-repeat;
+		}
+		&_2{
+			background: url('../img/service/list-icons/02.svg') 0 0 no-repeat;
+		}
+		font-weight: 700;
+		font-size: 16px;
+		line-height: 24px;
+		color: #252B42;
 	}
 }
 
