--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -290,6 +290,27 @@ body{
 	}
 }
 
+// <================================================================================>
+
+
+.clients {
+	&__section {
+		padding-top: 58px;
+		padding-bottom: 78px;
+	}
+	&__row {
+		display: grid;
+		grid-template-columns: repeat(6, 1fr);
+		grid-gap: 50px;
+		align-items: center;
+	}
+	&__icons {
+	}
+}
+.vis-hid {
+}
+.container {
+}
 
 
 // Footer <================================================================================>
