--- a/Indicorp-layout/css/style.css
+++ b/Indicorp-layout/css/style.css
@@ -462,4 +462,61 @@ body {
   align-items: center;
 }
 
+.mailing {
+  background: #252B42;
+}
+
+.mailing__section {
+  padding: 30px 0;
+}
+
+.mailing__row {
+  background: #16697A;
+  padding: 30px 50px;
+  border-radius: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.mailing__title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 32px;
+  color: #FFFFFF;
+  max-width: 258px;
+}
+
+.form {
+  white-space: nowrap;
+  height: 60px;
+}
+
+.form__mail input {
+  height: 100%;
+  background: #F9F9F9;
+  border: 1px solid #E6E6E6;
+  box-sizing: border-box;
+  border-radius: 5px;
+  max-width: 333px;
+  padding: 0 24px;
+  font-family: "Montserrat", sans-serif;
+  font: inherit;
+  font-size: 17px;
+  line-height: 28px;
+  letter-spacing: 0.2px;
+  color: #737373;
+}
+
+.form__submit {
+  min-height: 100%;
+  background: #FFA62B;
+  border-radius: 0px 5px 5px 0px;
+  padding: 0px 22.5px 0;
+  margin: 0 0 0px -20px;
+  font-size: 14px;
+  line-height: 28px;
+  color: #FFFFFF;
+}
+
 /*FOOTER*/
