--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -211,11 +211,10 @@ body{
 
 		display: grid;
 		grid-template-columns: 60% 40%;
-		grid-column-gap: 121px;
 	}
 	&__video {
 		position: relative;
-		width: 100%;
+		max-width: 100%;
 		height: 442px;
 		background: url('../img/service/img.png') 0 0/cover no-repeat;
 		a::before{
@@ -255,6 +254,8 @@ body{
 				margin-right: -15px;
 			}
 		}
+
+		margin-right: 50px;
 	}
 	&__content {
 
@@ -340,24 +341,24 @@ body{
 .form {
 	white-space: nowrap;
 	height: 60px;
+	input{
+		height: 100%;
+		background: #F9F9F9;
+		border: 1px solid #E6E6E6;
+		box-sizing: border-box;
+		border-radius: 5px;
+
+		max-width: 450-117px;
+		padding: 0 24px;
+
+		font-family: "Montserrat", sans-serif;
+		font: inherit;
+		font-size: 17px;
+		line-height: 28px;
+		letter-spacing: 0.2px;
+		color: #737373;
+	}
 	&__mail {
-		input{
-			height: 100%;
-			background: #F9F9F9;
-			border: 1px solid #E6E6E6;
-			box-sizing: border-box;
-			border-radius: 5px;
-
-			max-width: 450-117px;
-			padding: 0 24px;
-
-			font-family: "Montserrat", sans-serif;
-			font: inherit;
-			font-size: 17px;
-			line-height: 28px;
-			letter-spacing: 0.2px;
-			color: #737373;
-		}
 	}
 	&__submit {
 		min-height: 100%;
