--- a/Indicorp-layout/css/style.css
+++ b/Indicorp-layout/css/style.css
@@ -373,14 +373,14 @@ body {
   margin-top: 100px;
   display: grid;
   grid-template-columns: 60% 40%;
-  grid-column-gap: 121px;
 }
 
 .service__video {
   position: relative;
-  width: 100%;
+  max-width: 100%;
   height: 442px;
   background: url("../img/service/img.png") 0 0/cover no-repeat;
+  margin-right: 50px;
 }
 
 .service__video a::before {
@@ -492,7 +492,7 @@ body {
   height: 60px;
 }
 
-.form__mail input {
+.form input {
   height: 100%;
   background: #F9F9F9;
   border: 1px solid #E6E6E6;
