--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -373,6 +373,106 @@ body{
 	}
 }
 
+// <================================================================================>
+
+.support {
+	&__section {
+		background-color: #F3F3F3;
+		padding: 80px 0 170px;
+	}
+	&__title {
+		text-align: center;
+		margin: 0 auto;
+		max-width: 300px;
+	}
+	&__text {
+		text-align: center;
+		margin: 0 auto;
+		max-width: 470px;
+	}
+	&__row {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		grid-row-gap: 20px;
+
+		margin-top: 80px;
+	}
+	&__item {
+		text-align: center;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		background-color: #fff;
+		padding: 50px 40px;
+		min-height: 333px;
+		&--active{
+
+			position: relative;
+			z-index: 1;
+			&::after{
+				content: '';
+				height: calc(100% + 80px);
+				width: 100%;
+
+				position: absolute;
+				top: -40px;
+				bottom: -40px;
+				left: 0;
+				right: 0;
+				z-index: -1;
+				background-color: #252B42;
+			}
+		}
+	}
+}
+
+.item-support {
+	display: flex;
+	flex-direction: column;
+	&__icon {
+		margin-bottom: 15px;
+	}
+	&__mail {
+		font-weight: 600;
+		font-size: 14px;
+		line-height: 24px;
+		color: #252B42;
+
+		&--active{color: #fff;}
+	}
+	&__text {
+		font-weight: 700;
+		font-size: 16px;
+		line-height: 24px;
+		color: #252B42;
+
+		margin-top: 15px;
+
+		&--active{color: #fff;}
+	}
+	&__link {
+		font-weight: 600;
+		font-size: 14px;
+		line-height: 24px;
+		color: #FFA62B;
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		min-height: 40px;
+		min-width: 140px;
+		border: 2px solid #FFA62B;
+		border-radius: 4px;
+
+		margin-top: 25px;
+		&--active{
+			color: #fff;
+			border-color: #fff;
+		}
+	}
+}
+
 
 // Footer <================================================================================>
 
