--- a/#src/scss/_header.scss
+++ b/#src/scss/_header.scss
@@ -3,7 +3,7 @@
 	top: 0;
 	left: 0;
 	width: 100%;
-	&.header-active{
+	&.header--active{
 		min-height: 36+36px;
 		background-color: #fff;
 	}
@@ -24,6 +24,7 @@
 
 	&__list {
 		display: flex;
+
 	}
 
 	&__item {
@@ -41,5 +42,85 @@
 
 	&__burger {
 		display: none;
+	}
+}
+
+
+
+@media (max-width: 798px){
+	.header__burger{
+		display: inline-block;
+		position: relative;
+		width: 30px;
+		height: 20px;
+		cursor: pointer;
+		&::before,
+		&::after{
+			content: '';
+			position: absolute;
+			height: 2px;
+			left: 0;
+			background-color: #000;
+			transition: all 0.3s ease 0s;
+		}
+		&::before{
+			top: 0;
+			left: 0;
+			width: 100%;
+		}
+		&::after{
+			width: 100%;
+			bottom: 0;
+			right: 0;
+		}
+		span{
+			position: absolute;
+			width: 100%;
+			height: 2px;
+			right: 0px;
+			bottom: 9px;
+			background-color: #000;
+			transition: all 0.4s ease 0s;
+		}
+	}
+	.header__burger.header--active::before{
+		transform: rotate(-45deg);
+		top: 9px;
+		width: 100%;
+	}
+	.header__burger.header--active::after{
+		transform: rotate(45deg);
+		bottom: 9px;
+		width: 100%;
+	}
+	.header__burger.header--active span{
+		left: 100%;
+		opacity: 0;
+	}
+	.header__list{
+		text-align: center;
+		overflow-y: auto;
+
+		position: fixed;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		top: -100%;
+
+		display: block;
+		text-align: center;
+		padding-top: 50px;
+		transition: all 0.3s ease 0s;
+
+		background-color: #fff;
+	}
+	.header__item{
+		font-size: 25px;
+		text-align: center;
+		margin: 0;
+		padding-top: 30px;
+	}
+	.header__list.header--active{
+		top: 0;
 	}
 }
