--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -28,6 +28,9 @@ body{
 	background: url('../img/main-section-bg.jpg') 0 0/cover no-repeat;
 	&__main-section{
 		padding: 184px 0 40px;
+		@media (max-width: 450px){
+			padding: 90px 0 30px;
+		}
 	}
 	&__title {
 		max-width: 509px;
@@ -50,6 +53,8 @@ body{
 
 	&__links {
 		display: flex;
+		flex-wrap: wrap;
+		grid-row-gap: 20px;
 
 		margin-top: 35px;
 		font-weight: 700;
@@ -89,6 +94,12 @@ body{
 		grid-template-columns: repeat(3, 1fr);
 		grid-column-gap: 30px;
 		grid-row-gap: 30px;
+		@media (max-width: 820px){
+			grid-template-columns: repeat(2, 1fr);
+		}
+		@media (max-width: 490px){
+			grid-template-columns: repeat(1, 1fr);
+		}
 
 		margin-top: 80px;
 	}
@@ -156,6 +167,16 @@ body{
 		grid-template-columns: repeat(4, 1fr);
 		grid-column-gap: 38px;
 		grid-row-gap: 38px;
+
+		@media (max-width: 866px) {
+			grid-template-columns: repeat(3, 1fr);
+		}
+		@media (max-width: 660px) {
+			grid-template-columns: repeat(2, 1fr);
+		}
+		@media (max-width: 400px) {
+			grid-template-columns: repeat(1, 1fr);
+		}
 
 		margin-top: 50px;
 	}
