--- a/Indicorp-layout/css/style.css
+++ b/Indicorp-layout/css/style.css
@@ -145,7 +145,7 @@ body {
   width: 100%;
 }
 
-.header.header-active {
+.header.header--active {
   min-height: 72px;
   background-color: #fff;
 }
@@ -222,6 +222,8 @@ body {
 
 .main-section__links {
   display: flex;
+  flex-wrap: wrap;
+  grid-row-gap: 20px;
   margin-top: 35px;
   font-weight: 700;
   letter-spacing: 0.2px;
@@ -732,4 +734,125 @@ body {
 
 .footer-bottom__list li:first-child {
   margin: 0;
+}
+
+@media (max-width: 866px) {
+  .advantages__row {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 820px) {
+  .features__row {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 798px) {
+  .header__burger {
+    display: inline-block;
+    position: relative;
+    width: 30px;
+    height: 20px;
+    cursor: pointer;
+  }
+
+  .header__burger::before,
+  .header__burger::after {
+    content: '';
+    position: absolute;
+    height: 2px;
+    left: 0;
+    background-color: #000;
+    transition: all 0.3s ease 0s;
+  }
+
+  .header__burger::before {
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+
+  .header__burger::after {
+    width: 100%;
+    bottom: 0;
+    right: 0;
+  }
+
+  .header__burger span {
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    right: 0px;
+    bottom: 9px;
+    background-color: #000;
+    transition: all 0.4s ease 0s;
+  }
+
+  .header__burger.header--active::before {
+    transform: rotate(-45deg);
+    top: 9px;
+    width: 100%;
+  }
+
+  .header__burger.header--active::after {
+    transform: rotate(45deg);
+    bottom: 9px;
+    width: 100%;
+  }
+
+  .header__burger.header--active span {
+    left: 100%;
+    opacity: 0;
+  }
+
+  .header__list {
+    text-align: center;
+    overflow-y: auto;
+    position: fixed;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    top: -100%;
+    display: block;
+    text-align: center;
+    padding-top: 50px;
+    transition: all 0.3s ease 0s;
+    background-color: #fff;
+  }
+
+  .header__item {
+    font-size: 25px;
+    text-align: center;
+    margin: 0;
+    padding-top: 30px;
+  }
+
+  .header__list.header--active {
+    top: 0;
+  }
+}
+
+@media (max-width: 660px) {
+  .advantages__row {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 490px) {
+  .features__row {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media (max-width: 450px) {
+  .main-section__main-section {
+    padding: 90px 0 30px;
+  }
+}
+
+@media (max-width: 400px) {
+  .advantages__row {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
