--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -232,6 +232,10 @@ body{
 
 		display: grid;
 		grid-template-columns: 60% 40%;
+
+		@media (max-width: 754px) {
+			grid-template-columns: 100%;
+		}
 	}
 	&__video {
 		position: relative;
@@ -277,6 +281,10 @@ body{
 		}
 
 		margin-right: 50px;
+		@media (max-width: 754px) {
+			margin: 0;
+			height: 300px;
+		}
 	}
 	&__content {
 
@@ -325,6 +333,14 @@ body{
 		grid-template-columns: repeat(6, 1fr);
 		grid-gap: 50px;
 		align-items: center;
+
+		@media (max-width: 882px) {
+			grid-template-columns: repeat(3, 1fr);
+			text-align: center;
+		}
+		@media (max-width: 464px) {
+			grid-template-columns: repeat(2, 1fr);
+		}
 	}
 	&__icons {
 	}
@@ -333,19 +349,20 @@ body{
 // <================================================================================>
 
 
+
 .mailing {
 	background: #252B42;
 	&__section {
 		padding: 30px 0;
 	}
 	&__row {
-		background: #16697A;
-		padding: 30px 50px;
-		border-radius: 2px;
-
-		display: flex;
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
 		align-items: center;
-		justify-content: space-between;
+
+		@media (max-width: 676px) {
+			grid-template-columns: repeat(1, 1fr);
+		}
 	}
 	&__title {
 		font-weight: 700;
@@ -353,46 +370,50 @@ body{
 		line-height: 32px;
 		color: #FFFFFF;
 
-		max-width: 258px;
+		max-width: 258px
 	}
 	&__form {
+		display: grid;
+		grid-template-columns: 1fr 117px;
+
+		@media (max-width: 676px) {
+			margin-top: 30px;
+		}
 	}
 }
 
 .form {
-	white-space: nowrap;
-	height: 60px;
-	input{
-		height: 100%;
-		background: #F9F9F9;
-		border: 1px solid #E6E6E6;
-		box-sizing: border-box;
-		border-radius: 5px;
-
-		max-width: 450-117px;
-		padding: 0 24px;
-
-		font-family: "Montserrat", sans-serif;
-		font: inherit;
-		font-size: 17px;
-		line-height: 28px;
-		letter-spacing: 0.2px;
-		color: #737373;
-	}
 	&__mail {
+		input{
+			width: 100%;
+			min-height: 58px;
+
+			background: #F9F9F9;
+			border: 1px solid #E6E6E6;
+			border-radius: 5px;
+
+			padding: 0 24px;
+
+			font-family: "Montserrat", sans-serif;
+			font: inherit;
+			font-size: 17px;
+			line-height: 28px;
+			letter-spacing: 0.2px;
+			color: #737373;
+		}
 	}
-	&__submit {
-		min-height: 100%;
+	&__button {
 		background: #FFA62B;
 		border-radius: 0px 5px 5px 0px;
 		padding: 0px 22.5px 0;
 
-		margin: 0 0 0px -20px;
 		font-size: 14px;
 		line-height: 28px;
 		color: #FFFFFF;
+		margin: 0 0 0 -5px;
 	}
 }
+
 
 // <================================================================================>
 
