--- a/Indicorp-layout/css/style.css
+++ b/Indicorp-layout/css/style.css
@@ -473,12 +473,9 @@ body {
 }
 
 .mailing__row {
-  background: #16697A;
-  padding: 30px 50px;
-  border-radius: 2px;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   align-items: center;
-  justify-content: space-between;
 }
 
 .mailing__title {
@@ -489,18 +486,17 @@ body {
   max-width: 258px;
 }
 
-.form {
-  white-space: nowrap;
-  height: 60px;
+.mailing__form {
+  display: grid;
+  grid-template-columns: 1fr 117px;
 }
 
-.form input {
-  height: 100%;
+.form__mail input {
+  width: 100%;
+  min-height: 58px;
   background: #F9F9F9;
   border: 1px solid #E6E6E6;
-  box-sizing: border-box;
   border-radius: 5px;
-  max-width: 333px;
   padding: 0 24px;
   font-family: "Montserrat", sans-serif;
   font: inherit;
@@ -510,15 +506,14 @@ body {
   color: #737373;
 }
 
-.form__submit {
-  min-height: 100%;
+.form__button {
   background: #FFA62B;
   border-radius: 0px 5px 5px 0px;
   padding: 0px 22.5px 0;
-  margin: 0 0 0px -20px;
   font-size: 14px;
   line-height: 28px;
   color: #FFFFFF;
+  margin: 0 0 0 -5px;
 }
 
 .support__section {
@@ -736,6 +731,13 @@ body {
   margin: 0;
 }
 
+@media (max-width: 882px) {
+  .clients__row {
+    grid-template-columns: repeat(3, 1fr);
+    text-align: center;
+  }
+}
+
 @media (max-width: 866px) {
   .advantages__row {
     grid-template-columns: repeat(3, 1fr);
@@ -833,6 +835,27 @@ body {
   }
 }
 
+@media (max-width: 754px) {
+  .service__row {
+    grid-template-columns: 100%;
+  }
+
+  .service__video {
+    margin: 0;
+    height: 300px;
+  }
+}
+
+@media (max-width: 676px) {
+  .mailing__row {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .mailing__form {
+    margin-top: 30px;
+  }
+}
+
 @media (max-width: 660px) {
   .advantages__row {
     grid-template-columns: repeat(2, 1fr);
@@ -842,6 +865,12 @@ body {
 @media (max-width: 490px) {
   .features__row {
     grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media (max-width: 464px) {
+  .clients__row {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
