--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -421,6 +421,9 @@ body{
 	&__section {
 		background-color: #F3F3F3;
 		padding: 80px 0 170px;
+		@media (max-width: 500px) {
+			padding: 60px 0 70px;
+		}
 	}
 	&__title {
 		text-align: center;
@@ -435,9 +438,17 @@ body{
 	&__row {
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
-		grid-row-gap: 20px;
 
 		margin-top: 80px;
+
+		@media (max-width: 860px) {
+			grid-template-columns: repeat(2, 1fr);
+		}
+
+		@media (max-width: 706px) {
+			grid-template-columns: repeat(1, 1fr);
+			grid-gap: 20px;
+		}
 	}
 	&__item {
 		text-align: center;
@@ -464,6 +475,12 @@ body{
 				right: 0;
 				z-index: -1;
 				background-color: #252B42;
+
+				@media (max-width: 706px) {
+					height: 100%;
+					top: 0;
+					bottom: 0;
+				}
 			}
 		}
 	}
@@ -526,6 +543,7 @@ body{
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		flex-wrap: wrap;
 	}
 	&__content {
 	}
