--- a/Indicorp-layout/css/style.css
+++ b/Indicorp-layout/css/style.css
@@ -536,7 +536,6 @@ body {
 .support__row {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-row-gap: 20px;
   margin-top: 80px;
 }
 
@@ -628,6 +627,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .contact__title {
@@ -658,7 +658,7 @@ body {
 
 .footer-top .container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 405px;
+  grid-template-columns: repeat(4, 1fr) 405px;
   grid-gap: 15px;
 }
 
@@ -710,6 +710,7 @@ body {
   justify-content: space-between;
   align-items: center;
   min-height: 74px;
+  flex-wrap: wrap;
 }
 
 .footer-bottom__copyright {
@@ -731,6 +732,13 @@ body {
   margin: 0;
 }
 
+@media (max-width: 950px) {
+  .footer-top .container {
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 50px;
+  }
+}
+
 @media (max-width: 882px) {
   .clients__row {
     grid-template-columns: repeat(3, 1fr);
@@ -741,6 +749,12 @@ body {
 @media (max-width: 866px) {
   .advantages__row {
     grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 860px) {
+  .support__row {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -846,6 +860,19 @@ body {
   }
 }
 
+@media (max-width: 706px) {
+  .support__row {
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 20px;
+  }
+
+  .support__item--active::after {
+    height: 100%;
+    top: 0;
+    bottom: 0;
+  }
+}
+
 @media (max-width: 676px) {
   .mailing__row {
     grid-template-columns: repeat(1, 1fr);
@@ -859,6 +886,18 @@ body {
 @media (max-width: 660px) {
   .advantages__row {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 646px) {
+  .footer-top .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 500px) {
+  .support__section {
+    padding: 60px 0 70px;
   }
 }
 
@@ -882,6 +921,10 @@ body {
 
 @media (max-width: 400px) {
   .advantages__row {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .footer-top .container {
     grid-template-columns: repeat(1, 1fr);
   }
 }
